--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,23 @@
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
+<!--
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator</artifactId>
+		</dependency>
+-->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>3.3.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 
 
 	</dependencies>
